[package]
name = "client-dev-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "2.0.6"
rand = "0.8"
chrono = "0.4.26"
zkevm = { git = "https://github.com/scroll-tech/scroll-prover.git", tag = "v0.3.1" }
types = { git = "https://github.com/scroll-tech/scroll-prover.git", tag = "v0.3.1" }
dotenv = "0.15.0"
env_logger = "0.9.0"
#ethers-providers = "1.0"